--- a/css/fonts.css
+++ b/css/fonts.css
@@ -19,3 +19,13 @@
     font-weight: normal;
     font-style: normal;
 }
+
+
+@font-face {
+    font-family:'BPG Ingiri Arial';
+    src:url(../fonts/bpg-ingiri-arial-webfont.eot);
+    src:url(../fonts/bpg-ingiri-arial-webfont.eot?#iefix) format('embedded-opentype'),
+        url(../fonts/bpg-ingiri-arial-webfont.woff2) format('woff2'),
+        url(../fonts/bpg-ingiri-arial-webfont.woff) format('woff'),
+        url(../fonts/bpg-ingiri-arial-webfont.ttf) format('truetype'),
+        url(../fonts/bpg-ingiri-arial-webfont.svg#bpg_ingiri_arialregular) format('svg')}
