--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,10 @@ header > a > img{
 .article-box{
     width: 570px;
     background: #F2F2F2;
-    /* vertical-align: top; */
+    vertical-align: top;
     padding: 15px 18px 40px 15px;
     /* margin-right: 15px; */
+    height: 225px;
     
 }
 .article-box-margin{
@@ -72,6 +73,7 @@ header > a > img{
 .article-wraper{
     margin-top: 20px;
     font-weight: bold;
+    width: 1500px;
 }
 .wraper-title{
     text-transform: uppercase;
@@ -113,3 +115,59 @@ iframe{
     height: 466px;
 }
 /* end contact-page */
+
+/* footer */
+
+.footer-nav{
+    margin-top: 68px;
+    width: 150px;
+    margin-left: 100px;
+    margin-bottom: 30px;
+}
+.divador{
+    height: 30px;
+    width: 2px;
+    background-color: #3D58A6;
+    margin-right: 30px;
+}
+.footer-img{
+    height: 30px;
+}
+.footer-a{
+    margin-right: 30px;
+}
+
+/* news */
+.news-main{
+    margin-left: 30px;
+    margin-top: 40px;
+}
+.news-section-p-1{
+    font-size: 48px;
+    background-color: #3D58A6;
+    color: white;
+    width: 56px;
+    padding-left: 4px;
+}
+.news-section-p-2{
+    font-size: 22px;
+    color: #3D58A6;
+    margin-top: 8px;
+    margin-bottom: 28px;
+}
+.news-h2{
+    font-family: "BPG Nino Mtavruli Bold", sans-serif;
+    font-size: 20px;
+    margin-bottom: 22px;
+}
+.news-main-div-img{
+    width: 270px;
+}
+.news-p{
+    width: 930px;
+    height: 330px;
+    vertical-align: top;
+    margin-left: 38px;
+    margin-bottom: 69px;
+    font-family:'BPG Ingiri Arial';
+}
